# typestats

./: .dprint.jsonc  LICENSE  README.md  lefthook.yml  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  publish-pypi.yml
src/typestats/: __init__.py  __main__.py  _http.py  _pypi.py  _ruff.py  _typeshed.py  analyze.py  index.py  report.py  typecheckers.py
tests/: .ruff.toml  test_analyze.py  test_cli.py  test_http.py  test_index.py  test_pypi.py  test_report.py  test_smoke.py  test_typecheckers.py  test_typeshed.py
tests/fixtures/module_getattr/: pyproject.toml
tests/fixtures/module_getattr/getattr_pkg/: __init__.py  mod.py
tests/fixtures/noalias_project/: pyproject.toml
tests/fixtures/private_reexport/: pyproject.toml
tests/fixtures/private_reexport/mylib/: __init__.py
tests/fixtures/private_reexport/mylib/_core/_ops/: __init__.py  do_mul.py
tests/fixtures/private_reexport/optype/: __init__.py
tests/fixtures/private_reexport_pyi/: pyproject.toml
tests/fixtures/private_reexport_pyi/mylib/_core/: __init__.py
tests/fixtures/private_reexport_pyi/optype/_core/: __init__.py  _do.py
tests/fixtures/project/: pyproject.toml
tests/fixtures/project/anypkg/: __init__.py  _defs.py  mod.py
tests/fixtures/project/ignorepkg/: __init__.py  core.py
tests/fixtures/project/mylib/_core/: __init__.py  _can.py
tests/fixtures/project/mylib_pyi/: __init__.py  __init__.pyi
tests/fixtures/project/mylib_pyi/_core/: __init__.py
tests/fixtures/project/noalias/: __init__.py  funcs.py
tests/fixtures/project/optype_pyi/: __init__.py
tests/fixtures/project/optype_pyi/_core/: __init__.py
tests/fixtures/project/pkg/: _b.py  a.py  lazy.py
tests/fixtures/project/stubpkg/: _typeforms.pyi
tests/fixtures/project/tcopkg/: __init__.py  mod.py
tests/fixtures/public_project/: pyproject.toml
tests/fixtures/public_project/pkg/: __init__.py  api.py
tests/fixtures/stub_typed_private/: pyproject.toml
tests/fixtures/stub_typed_private/stubpkg/: __init__.py  _typeforms.py
tests/fixtures/stubs_base/mypkg/: __init__.py  _impl.py  utils.py
tests/fixtures/stubs_overlay/mypkg-stubs/: __init__.pyi
