[build-system]
requires = ["uv_build<1.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = [
  "anypkg",
  "ignorepkg",
  "pkg",
  "mylib",
  "optype",
  "mylib_pyi",
  "optype_pyi",
  "stubpkg",
]

[project]
name = "test-project"
version = "0.1.0"
requires-python = ">=3.14"
